--- a/index.html
+++ b/index.html
@@ -41,5 +41,11 @@
   <span class="dot" onclick="currentSlide(2)"></span> 
   <span class="dot" onclick="currentSlide(3)"></span> 
 </div>
+        <marquee scrollamount="10"
+direction="left"
+behavior="scroll">
+
+<img src="walk.gif" />
+</marquee>
     </body>
 </html>
