--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
   <span class="dot" onclick="currentSlide(2)"></span> 
   <span class="dot" onclick="currentSlide(3)"></span> 
 </div>
-        <p>click dot</p>
+        <centre><p> click dot</p></centre>      
 <marquee scrollamount="10"
  direction="left"
  behavior="scroll">
-<img src="walk.gif" />
+<img src="walk.gif" width="100" hight="100"/>
 </marquee>
     </body>
 </html>
