--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
   <span class="dot" onclick="currentSlide(2)"></span> 
   <span class="dot" onclick="currentSlide(3)"></span> 
 </div>
-        <centre><p> click dot</p></centre>      
+        <p><centre>click dot</centre></p>
 <marquee scrollamount="10"
  direction="left"
  behavior="scroll">
-<img src="walk.gif" width="100" hight="100"/>
+<img src="walk.gif" width="200" hight="200"/>
 </marquee>
     </body>
 </html>
