--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <marquee scrollamount="10"
  direction="left"
  behavior="scroll">
-<img src="walk.gif" width="200" hight="200"/>
+<img src="bots.jpg" width="200" hight="200"/>
 </marquee>
     </body>
 </html>
