--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="code.js" type="text/javascript" charset="utf-8"></script>        
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
-    <body>
+    <body background="bots.jpg">
         <!-- Slideshow container -->
 <div class="slideshow-container">
 
@@ -42,10 +42,6 @@
   <span class="dot" onclick="currentSlide(3)"></span> 
 </div>
         <p><centre>click dot</centre></p>
-<marquee scrollamount="10"
- direction="left"
- behavior="scroll">
-<img src="bots.jpg" width="200" hight="200"/>
-</marquee>
+
     </body>
 </html>
