--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="code.js" type="text/javascript" charset="utf-8"></script>        
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
-    <body background="bots.jpg">
+    <body background="bots.jpg" style='position:fixed;top:0px;left:0px;width:100%;height:100%;z-index:-1;>
         <!-- Slideshow container -->
 <div class="slideshow-container">
 
