--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
         <title>Empty Project</title>
         <script src="code.js" type="text/javascript" charset="utf-8"></script>        
         <link href="style.css" rel="stylesheet" type="text/css">
+        <style>
+            body{
+                background-image:url("bots.jpg")
+            }
+            </style>
     </head>
-    <body background="bots.jpg" background-position:center center '>
+    <body >
         <!-- Slideshow container -->
 <div class="slideshow-container">
 
