--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
         <link href="style.css" rel="stylesheet" type="text/css">
         <style>
             body{
-                background-image:url("bots.jpg")
+                background-image:url("bots.jpg");
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-position: center;
             }
             </style>
     </head>
