--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                 background-image:url("bots.jpg");
                 background-repeat: no-repeat;
                 background-attachment: fixed;
+                background-position: ; 100% 100%
                 
             }
             </style>
