--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
                 background-image:url("bots.jpg");
                 background-repeat: no-repeat;
                 background-attachment: fixed;
-                background-position: ; 100% 100%
+                background-position: center;
+                background-size: cover;
                 
             }
             </style>
