--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
             body{
                 background-image:url("bots.jpg");
                 background-repeat: no-repeat;
-                background-attachment: fixed;
-                background-position: 100% 100%;
+                background-attachment: fixed
                 background-size: cover;
                 
             }
