--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             body{
                 background-image:url("bots.jpg");
                 background-repeat: no-repeat;
-                background-attachment: fixed
+                background-attachment: fixed;
                 background-position: center;
                 background-size: cover;
                 
