--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 background-image:url("bots.jpg");
                 background-repeat: no-repeat;
                 background-attachment: fixed;
-                background-position:center bottom;
+                background-position:100% 100%;
                 background-size: cover;
                 
             }
