--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 background-image:url("botshabelo.jpg");
                 background-repeat: no-repeat;
                 background-attachment: fixed;
-                background-position:center center;
+                background-position:center bottom;
                 background-size: cover;
                 
             }
