--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 background-image:url("thapelo.jpg");
                 background-repeat: no-repeat;
                 background-attachment: fixed;
-                background-position:center center;
+                background-position: center;
                 background-size: cover;
                 
             }
