--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-position: bottom center;
-                background-size: cover;
+                background-size: contain;
                 
             }
             </style>
