--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
                 background-image:url("thapelo.jpg");
                 background-repeat: no-repeat;
                 background-attachment: fixed;
-                background-position: bottom center;
-                background-size: contain;
+                background-position: center;
+                background-size: initial;
                 
             }
             </style>
