--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-position: center;
-                background-size: initial;
+                background-size: 100% 100%;
                 
             }
             </style>
