--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 background-image:url("thapelo.jpg");
                 background-repeat: no-repeat;
                 background-attachment: fixed;
-                background-size: 350px 250px;
+                background-size: 350px 240px;
                 
             }
             </style>
@@ -21,8 +21,11 @@
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <img src="TMLELECTRICAL.png" style="width:100%">
+    <div class="numbertext">1 / 3</div>    
+      <a href="default.asp">
+  <img src="TMLELECTRICAL.png"  style="width:100%">
+</a>
+      
     <div class="text">Caption Text</div>
   </div>
 
