--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>    
-      <a href="default.asp">
+      <a href="https://tmlelectrical.wordpress.com">
   <img src="TMLELECTRICAL.png"  style="width:100%">
 </a>
       
